<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"

    android:background="@color/background_card">
<!--    android:layout_marginStart="8dp"-->
<!--    android:layout_marginTop="4dp"-->
<!--    android:layout_marginEnd="8dp"-->
<!--    android:layout_marginBottom="4dp"-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/background_card"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/imgPerson"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            tools:srcCompat="@tools:sample/avatars"
            app:civ_border_color="@color/background"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="2dp"
                android:paddingBottom="10dp"
                android:text="@string/name"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                android:textColor="@color/text_color"/>

            <TextView
                android:id="@+id/addressText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:layout_weight="1"
                android:text="@string/address"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                android:textColor="@color/text_color"/>

            <TextView
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:layout_weight="1"
                android:text="@string/email"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                android:textColor="@color/text_color"/>

            <TextView
                android:id="@+id/phoneText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:layout_weight="1"
                android:text="@string/phone"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                android:textColor="@color/text_color"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>